--- a/React.html
+++ b/React.html
@@ -12,12 +12,7 @@
 <body>
     <div id="root"></div>
     <script type="text/babel">
-        const element = React.createElement(
-                            "h1",
-                            { title: "foo" },
-                            "Hello"
-                        )
-
+        const element = <h1 title="foo">Hello</h1>
         const container = document.getElementById("root")
         ReactDOM.render(element, container)
     </script>
