--- a/React.html
+++ b/React.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React</title>
-    <script src="react.development.js"></script>
-    <script src="./react-dom.development.js"></script>
-    <script src="./babel.min.js"></script>
+    <script src="./lib/react.development.js"></script>
+    <script src="./lib/react-dom.development.js"></script>
+    <script src="./lib/babel.min.js"></script>
 </head>
 <body>
     <div id="root"></div>
